--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,41 @@
     </dependency>
   </dependencies>
 
+  <properties>
+    <maxUsers>1</maxUsers>
+    <testScenario>example-performance-test.jmx</testScenario>
+  </properties>
+
   <build>
     <finalName>helloworld</finalName>
     <plugins>
+      <plugin>
+        <groupId>com.lazerycode.jmeter</groupId>
+        <artifactId>jmeter-maven-plugin</artifactId>
+        <version>2.8.0</version>
+        <executions>
+          <execution>
+            <id>jmeter-tests</id>
+            <goals>
+              <goal>jmeter</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <propertiesUser>
+            <maxUsers>${maxUsers}</maxUsers>
+          </propertiesUser>
+
+          <propertiesGlobal>
+            <maxUsers>${maxUsers}</maxUsers>
+          </propertiesGlobal>
+
+          <testFilesIncluded>
+            <jMeterTestFile>${testScenario}</jMeterTestFile>
+          </testFilesIncluded>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
