--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     goals: 'verify'
 - task: CmdLine@2
   inputs:
-    script: 'tree -n3 target'
+    script: 'ls -alh target/jmeter/reports'
