implementing as job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,27 +3,28 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-trigger:
-  - master
-
-pool:
-  vmImage: 'ubuntu-latest'
-
-steps:
-  - task: Maven@3
-    inputs:
-      mavenPomFile: 'pom.xml'
-      mavenOptions: '-Xmx3072m'
-      javaHomeOption: 'JDKVersion'
-      jdkVersionOption: '1.8'
-      jdkArchitectureOption: 'x64'
-      publishJUnitResults: true
-      testResultsFiles: '**/surefire-reports/TEST-*.xml'
-      goals: 'verify'
-  - task: CmdLine@2
-    inputs:
-      script: 'ls -alh $(System.DefaultWorkingDirectory)/target/jmeter/reports'
-  - task: PublishPipelineArtifact@1
-    inputs:
-      path: $(System.DefaultWorkingDirectory)/target/jmeter/reports
-      artifact: JmeterReport
+jobs:
+  - job: Run Jmeter Tests
+    pool:
+      vmImage: 'ubuntu-latest'
+    trigger:
+      - master
+    timeoutInMinutes: 5
+    steps:
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          mavenOptions: '-Xmx3072m'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '1.8'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: true
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'verify'
+      - task: CmdLine@2
+        inputs:
+          script: 'ls -alh $(System.DefaultWorkingDirectory)/target/jmeter/reports'
+      - task: PublishPipelineArtifact@1
+        inputs:
+          path: $(System.DefaultWorkingDirectory)/target/jmeter/reports
+          artifact: JmeterReport
