adding python task and step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,7 @@ jobs:
         inputs:
           script: 'ls -alh $(System.DefaultWorkingDirectory)/target/jmeter/reports'
       - task: PythonScript@0
+        displayName: Run Trend Reports
         inputs:
           scriptSource: 'filePath'
           scriptPath: $(System.DefaultWorkingDirectory)/target/charts.py
