--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ jobs:
           project: 'jmeter'
           pipeline: ${system.definitionId}
           runVersion: 'specific'
-          runId: 18
+          runId: $(System.JobId)
 
       - task: CmdLine@2
         displayName: List_Past_Artifacts
