--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ jobs:
     timeoutInMinutes: 5
     steps:
       - bash: |
-          echo '##vso[task.setvariable variable=previousBuildId]'$((3-2))
+          echo '##vso[task.setvariable variable=previousBuildId]'$((BuildID-2))
       - bash: echo $(previousBuildId)        # This will be 20, since the variables are expanded just before the step
 
       - task: DownloadPipelineArtifact@2
