--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
           project: 'jmeter'
           pipeline: ${system.definitionId}
           runVersion: 'specific'
-          runId: $(Build.BuildNumber)
+          runId: $(previousBuildId)
 
       - task: CmdLine@2
         displayName: List_Past_Artifacts
@@ -57,7 +57,7 @@ jobs:
         displayName: Run Trend Reports
         inputs:
           scriptSource: 'filePath'
-          scriptPath: $(System.DefaultWorkingDirectory)/target/charts.py
+          scriptPath: $(System.DefaultWorkingDirectory)/target/trend_charts.py
 
       - task: PublishPipelineArtifact@1
         displayName: Archive_JMeter_Report
