--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,12 +26,12 @@ jobs:
           goals: 'verify'
 
       - task: CmdLine@2
-        displayName: List_JMeter_ReportDir
+        displayName: List JMeter ReportDir
         inputs:
           script: 'ls -alh $(System.DefaultWorkingDirectory)/target/jmeter/reports'
 
       - script: 'pip install chart_studio requests'
-        displayName: Install_Python_Libs
+        displayName: Install Python Libs
 
       - task: PythonScript@0
         displayName: Fetch Reports For Last Successful Builds
